feat(perf): 시스템 전반 조회/저장 속도 극대화 및 중복 통신 7건 최적화